[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://GFX/Tela_Inicial.png" type="Texture" id=2]
[ext_resource path="res://GFX/Fonts/zeldadxt.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.626
margin_top = 144.5
margin_right = 89.3735
margin_bottom = 327.5
custom_constants/separation = 30

[node name="ButtonStart" type="Button" parent="ColorRect/VBoxContainer"]
margin_right = 246.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "COMEÇAR"
flat = true

[node name="ButtonCredits" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 71.0
margin_right = 246.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CRÉDITOS"
flat = true

[node name="ButtonExit" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 142.0
margin_right = 246.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SAIR"
flat = true

[connection signal="pressed" from="ColorRect/VBoxContainer/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ButtonCredits" to="." method="_on_ButtonCredits_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ButtonExit" to="." method="_on_ButtonExit_pressed"]
